# mm-base1

./: .env.example  justfile  pyproject.toml  requirements-dev.txt  requirements.txt
app/: app.py  config.py  db.py  jinja.py  main.py  models.py  telegram.py
app/routers/: __init__.py  api_router.py  ui_router.py
app/services/: base.py  main_service.py
cookiecutter/{{cookiecutter.project_slug}}/: .env.example  justfile  pyproject.toml  requirements-dev.txt  requirements.txt
cookiecutter/{{cookiecutter.project_slug}}/ansible/: hosts.yml.example  playbook.yml
cookiecutter/{{cookiecutter.project_slug}}/docker/: Dockerfile
cookiecutter/{{cookiecutter.project_slug}}/src/app/: config.py  db.py
demo/: .dockerignore  .env.example  README.md  justfile  pyproject.toml  requirements.txt
demo/docker/: Dockerfile  docker-compose.yml
demo/src/app/: config.py  db.py  models.py
demo/src/app/routers/: api_router.py
demo/src/app/services/: main_service.py
src/mm_base1/: server.py
