[project]
name = "mm-base1"
version = "0.1.4"
description = ""
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]~=0.115.0",
    "aiofiles~=24.1.0",
    "itsdangerous~=2.2.0",
    "WTForms~=3.1.0",
    "gunicorn~=23.0.0",
    "pyTelegramBotAPI~=4.23.0",
    "mm-std~=0.1.3",
    "mm-mongo~=0.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest~=8.3.3",
    "pytest-xdist~=3.6.1",
    "pytest-httpserver~=1.1.0",
    "coverage~=7.6.0",
    "ruff~=0.6.8",
    "pip-audit~=2.7.0",
    "bandit~=1.7.10",
    "mypy~=1.11.2",
    "types-python-dateutil~=2.9.0.20240906",
    "types-PyYAML~=6.0.12.20240917",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "stubs"
warn_no_return = false
strict = true
plugins = "pydantic.mypy"
exclude = ["^tests/", "^cookiecutter", "^demo/"]
[[tool.mypy.overrides]]
module = ["wtforms.*", "telebot.types.*", "telebot.util.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["mm_b1.routers.*", "app.routers.*"]
disable_error_code = ["no-untyped-def"]

[tool.ruff]
line-length = 130
target-version = "py312"
lint.select = [
    "F", # Pyflakes
    "E", "W", # pycodestyle
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C40", # flake8-comprehensions
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "RUF", # Ruff-specific rules
]
lint.ignore = [
    "A003", # builtin-attribute-shadowing
    "B008", # function-call-argument-default
    "RUF012",
    "UP040", # non-pep695-type-alias
    "COM812",
]
respect-gitignore = false
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]

[tool.pytest.ini_options]
addopts = "-n auto"
