[project]
name = "mm-base1"
version = "0.1.8"
description = ""
requires-python = ">=3.12"
dependencies = [
    "mm-mongo~=0.1.6",
    "mm-telegram~=0.0.3",
    "fastapi[all]~=0.115.6",
    "aiofiles~=24.1.0",
    "itsdangerous~=2.2.0",
    "WTForms~=3.2.1",
    "gunicorn~=23.0.0",
    "pyTelegramBotAPI~=4.24.0",
    "python-multipart==0.0.19", # delete dep after fastapi upgrade
    "jinja2~=3.1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest~=8.3.4",
    "pytest-xdist~=3.6.1",
    "pytest-httpserver~=1.1.0",
    "ruff~=0.8.1",
    "pip-audit~=2.7.3",
    "bandit~=1.8.0",
    "mypy~=1.13.0",
    "types-PyYAML~=6.0.12.20240917",
]

[tool.mypy]
python_version = "3.13"
mypy_path = "stubs"
warn_no_return = false
strict = true
plugins = "pydantic.mypy"
exclude = ["^tests/", "^cookiecutter", "^demo/"]
[[tool.mypy.overrides]]
module = ["wtforms.*", "telebot.types.*", "telebot.util.*"]
ignore_missing_imports = true
[[tool.mypy.overrides]]
module = ["mm_b1.routers.*", "app.routers.*"]
disable_error_code = ["no-untyped-def"]

[tool.ruff]
line-length = 130
target-version = "py313"
respect-gitignore = false
[tool.ruff.lint]
select = [
    "F",   # Pyflakes
    "E",
    "W",   # pycodestyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "C40", # flake8-comprehensions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "RUF", # Ruff-specific rules
]
ignore = [
    "A003",   # builtin-attribute-shadowing
    "B008",   # function-call-argument-default
    "RUF012",
    "COM812",
]
fixable = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]

[tool.pytest.ini_options]
# addopts = "-n auto"
